--- a/staff/groups/barman/cheers-and-beers/cheers-and-beers-app/components/menu.sass
+++ b/staff/groups/barman/cheers-and-beers/cheers-and-beers-app/components/menu.sass
@@ -18,6 +18,16 @@
   > div
       display: grid
       color: white
+      > a
+        font-size: 30px
+        margin-bottom: 10px
+      > h3
+        margin-left: 25vw
+        margin-right: 25vw
+        width: 50vw
+        font-size: 20px
+        margin-bottom: 20px
+        border-bottom: 1px solid white
 .menu--show
   width: 100%
 .menu--hide
