--- a/staff/groups/barman/cheers-and-beers/cheers-and-beers-template/style.sass
+++ b/staff/groups/barman/cheers-and-beers/cheers-and-beers-template/style.sass
@@ -1,10 +1,10 @@
-@import menu
-@import login
-@import register
-@import search
-@import results
-@import item
-@import detail
+@import components/menu
+@import components/login
+@import components/register
+@import components/search
+@import components/results
+@import components/item
+@import components/detail
 
 *
     padding: 0
